--- a/staff_handoff.html
+++ b/staff_handoff.html
@@ -36,7 +36,13 @@
     summary{ cursor:pointer; font-weight:900; }
     .otherRow{ display:flex; align-items:center; justify-content:space-between; gap:10px; padding:10px 0; border-top:1px dashed var(--line); cursor:pointer; }
     .otherRow:first-of-type{ border-top:none; }
-    .kbd{ font-family: ui-monospace, SFMono-Regular, Menlo, monospace; font-size: 12px; padding:2px 6px; border:1px solid var(--line); border-radius:8px; background:#fff; }
+    .dangerText{ color:var(--danger); font-weight:900; }
+
+    /* rank buttons */
+    .rankBtns{ display:flex; gap:6px; }
+    .rankBtn{ border:1px solid var(--line); background:#fff; border-radius:12px; padding:8px 10px; font-weight:900; cursor:pointer; }
+    .rankBtn:disabled{ opacity:.45; cursor:not-allowed; }
+
     /* modal */
     .overlay{ position:fixed; inset:0; background:rgba(0,0,0,.35); display:none; z-index:50; }
     .overlay.show{ display:block; }
@@ -50,10 +56,10 @@
     .qtyBtn{ width:38px; height:38px; border-radius:12px; border:1px solid var(--line); background:#fff; font-weight:900; cursor:pointer; }
     .qtyInp{ width:64px; text-align:center; border:1px solid var(--line); border-radius:12px; padding:10px 6px; font-weight:900; }
     .right{ text-align:right; }
-    .dangerText{ color:var(--danger); font-weight:900; }
     .searchBox{ display:flex; gap:8px; align-items:center; }
     .prodList{ display:flex; flex-direction:column; gap:8px; margin-top:10px; }
     .prodBtn{ display:flex; justify-content:space-between; gap:10px; padding:10px 12px; border:1px solid var(--line); border-radius:14px; background:#fff; cursor:pointer; font-weight:900; }
+    .prodBtn:disabled{ opacity:.5; cursor:not-allowed; }
     .stickyFoot{ position:sticky; bottom:0; background:#fff; padding:10px 0 0; border-top:1px solid var(--line); }
   </style>
 </head>
@@ -63,7 +69,7 @@
     <div class="topbar">
       <div>
         <div class="title">店員用 受け渡し</div>
-        <div class="muted">pending を表示。カードタップで内訳編集（POS風）→ 保存 / 完了 / キャンセル。</div>
+        <div class="muted">pending を表示。カードタップで編集（数量変更・品目追加）→ 保存 / 完了 / キャンセル。</div>
       </div>
 
       <div class="ctrls">
@@ -77,7 +83,7 @@
         <select id="sortMode">
           <option value="created">受付順</option>
           <option value="elapsed_desc">経過長い順</option>
-          <option value="rank">手動順（rank）</option>
+          <option value="rank">手動順（並び替え）</option>
         </select>
 
         <select id="filterMode">
@@ -134,8 +140,7 @@
 
     <div><b>品目追加</b></div>
     <div class="searchBox">
-      <input type="search" id="mSearch" placeholder="商品名で検索（例：コーヒー）" style="flex:1;">
-      <span class="kbd">Enter</span>
+      <input type="search" id="mSearch" placeholder="商品名で検索" style="flex:1;">
     </div>
     <div class="prodList" id="mProds"></div>
 
@@ -152,13 +157,13 @@
         <button class="btn btnOk" id="mHanded">受け渡し完了</button>
         <button class="btn btnDanger" id="mCancel">キャンセル</button>
       </div>
-      <div class="muted" style="margin-top:6px;">※キャンセル/完了は確認ダイアログあり</div>
+      <div class="muted" style="margin-top:6px;">※完了/キャンセルは確認ダイアログあり</div>
     </div>
   </div>
 </div>
 
 <script>
-  // ★あなたのGAS Web App URL（既にOK）
+  // ★あなたのGAS Web App URL
   const GAS_WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzeeGTJKZXHsVEw8DMz_QahMsnbqAUzDM3D_9mnv1LpVRxIitpL0F3xlCTwKUjV0OURzQ/exec";
 </script>
 <script src="./handoff.js"></script>
