--- a/sale.html
+++ b/sale.html
@@ -106,5 +106,7 @@
   </div>
 
   <script src="./sales.js"></script>
+  <script>document.body.insertAdjacentHTML("beforeend","<div style='opacity:.6;font-size:12px;margin-top:10px;'>sales.html loaded</div>");</script>
 </body>
 </html>
+
