staff_handoff.html

--- a/staff_handoff.html
+++ b/staff_handoff.html
@@ -65,6 +65,13 @@
 </head>
 <body>
 <header>
+  <div id="shopBar" style="margin:10px 0; display:flex; gap:10px; align-items:center; flex-wrap:wrap;">
+  <span id="shopState" style="font-weight:900;"></span>
+  <button id="btnToggleShop" style="padding:8px 12px;border:1px solid #bbb;border-radius:10px;background:#fff;cursor:pointer;">
+    閉店/営業切替
+  </button>
+</div>
+
   <div class="wrap">
     <div class="topbar">
       <div>
@@ -169,3 +176,4 @@
 <script src="./handoff.js"></script>
 </body>
 </html>
+
