--- a/owner.html
+++ b/owner.html
@@ -71,6 +71,10 @@
 
     <div class="card">
       <div style="font-weight:900;margin-bottom:8px;">商品追加 / 更新</div>
+      <div>説明</div><input id="add_desc" placeholder="説明">
+      <div>画像URL</div><input id="add_img" placeholder="https://...">
+      <div>動画URL</div><input id="add_vid" placeholder="https://...">
+
       <div class="grid">
         <div>商品ID（必須）</div><input id="add_id" placeholder="例: P010">
         <div>商品名</div><input id="add_name" placeholder="例: トルネードポテト（塩）">
@@ -86,3 +90,4 @@
   <script src="./owner.js"></script>
 </body>
 </html>
+
