--- a/owner.html
+++ b/owner.html
@@ -47,6 +47,37 @@
   </header>
 
   <div class="wrap">
+    <div class="card">
+  <div style="font-weight:900;margin-bottom:8px;">運用設定</div>
+  <div class="grid">
+    <div>注文受付</div>
+    <div style="display:flex;gap:10px;align-items:center;flex-wrap:wrap;">
+      <span id="ownerShopState" style="font-weight:900;"></span>
+      <button id="ownerToggleShop">閉店/営業切替</button>
+    </div>
+
+    <div>自動受け渡し（分）</div>
+    <select id="autoMin">
+      <option value="30">30</option>
+      <option value="60">60</option>
+      <option value="90">90</option>
+    </select>
+
+    <div>受け渡し表示件数</div>
+    <select id="staffLimit">
+      <option value="3">3</option>
+      <option value="6">6</option>
+      <option value="10">10</option>
+      <option value="20">20</option>
+      <option value="50">50</option>
+    </select>
+  </div>
+
+  <div class="bar" style="margin-top:10px;">
+    <button id="saveOps">設定を保存</button>
+  </div>
+</div>
+
     <div class="bar">
       <button id="btnReload">再読込</button>
       <button id="btnResetSoldOut">売切を全解除</button>
@@ -90,4 +121,5 @@
   <script src="./owner.js"></script>
 </body>
 </html>
+
 
