--- a/customer.html
+++ b/customer.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ja">
 <head>
+  <link rel="stylesheet" href="./ui_dark.css?v=1">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>お客さん用レジ</title>
@@ -137,3 +138,4 @@
   <script src="./customer.js" defer></script>
 </body>
 </html>
+
