--- a/history.html
+++ b/history.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ja">
 <head>
+  <link rel="stylesheet" href="./ui_dark.css?v=1">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>履歴</title>
@@ -122,3 +123,4 @@
   <script src="./history.js"></script>
 </body>
 </html>
+
