--- a/owner.html
+++ b/owner.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ja">
 <head>
+  <link rel="stylesheet" href="./ui_dark.css?v=1">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>設定（オーナー）</title>
@@ -121,5 +122,6 @@
   <script src="./owner.js"></script>
 </body>
 </html>
+
 
 
