--- a/sales.html
+++ b/sales.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ja">
 <head>
+  <link rel="stylesheet" href="./ui_dark.css?v=1">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>売上集計</title>
@@ -138,4 +139,5 @@
   <script>document.body.insertAdjacentHTML("beforeend","<div style='opacity:.6;font-size:12px;margin-top:10px;'>sales.html loaded</div>");</script>
 </body>
 </html>
+
 
