--- a/staff_handoff.html
+++ b/staff_handoff.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ja">
 <head>
+  <link rel="stylesheet" href="./ui_dark.css?v=1">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>店員用 受け渡し</title>
@@ -176,4 +177,5 @@
 <script src="./handoff.js"></script>
 </body>
 </html>
+
 
