--- a/staff_handoff.html
+++ b/staff_handoff.html
@@ -175,7 +175,9 @@
   const GAS_WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzeeGTJKZXHsVEw8DMz_QahMsnbqAUzDM3D_9mnv1LpVRxIitpL0F3xlCTwKUjV0OURzQ/exec";
 </script>
 <script src="./handoff.js"></script>
+<script src="./ui.js?v=1"></script>
 </body>
 </html>
+
 
 
