--- a/sales.html
+++ b/sales.html
@@ -137,7 +137,9 @@
 
   <script src="./sales.js"></script>
   <script>document.body.insertAdjacentHTML("beforeend","<div style='opacity:.6;font-size:12px;margin-top:10px;'>sales.html loaded</div>");</script>
+  <script src="./ui.js?v=1"></script>
 </body>
 </html>
+
 
 
