--- a/history.html
+++ b/history.html
@@ -121,6 +121,8 @@
   <div class="list" id="list"></div>
 
   <script src="./history.js"></script>
+  <script src="./ui.js?v=1"></script>
 </body>
 </html>
+
 
