--- a/customer.html
+++ b/customer.html
@@ -136,6 +136,8 @@
 
   <!-- ★ ロジックは外部JSへ -->
   <script src="./customer.js" defer></script>
+  <script src="./ui.js?v=1"></script>
 </body>
 </html>
+
 
