--- a/staff_handoff.html
+++ b/staff_handoff.html
@@ -67,11 +67,15 @@
 <body>
 <header>
   <div id="shopBar" style="margin:10px 0; display:flex; gap:10px; align-items:center; flex-wrap:wrap;">
-  <span id="shopState" style="font-weight:900;"></span>
-  <button id="btnToggleShop" style="padding:8px 12px;border:1px solid #bbb;border-radius:10px;background:#fff;cursor:pointer;">
-    閉店/営業切替
+  <span id="shopState" class="badge-open">
+    <span class="dot-open"></span><span>受付：営業中</span>
+  </span>
+
+  <button id="btnToggleShop" class="btn btn-close">
+    閉店（受付停止）
   </button>
 </div>
+
 
   <div class="wrap">
     <div class="topbar">
@@ -178,6 +182,7 @@
 <script src="./ui.js?v=1"></script>
 </body>
 </html>
+
 
 
 
